# hwpx-kit

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  sample-values.json
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: tests.yml
.playwright-mcp/: page-2026-07-11T16-51-26-005Z.yml
commands/: hwpx.md
scripts/: build_skill_package.py  check_stdout_purity.py  make_sample.py
skills/doc-create/: SKILL.md
skills/format-convert/: SKILL.md
skills/gongmun-format/: SKILL.md
skills/hwpx-form/: SKILL.md
skills/hwpx-form/references/: batch-fill.md  doc-objects.md  images-headers.md  secure-fill.md  tables.md  word-export.md
skills/office-export/: SKILL.md
skills/table-calc/: SKILL.md
src/hwpx_kit/: cli.py  format.py  inspect_rules.py  inspect_structure.py  output.py
src/hwpx_kit/adapter/: base.py  hwpx_engine.py  kordoc_engine.py  office_readers.py
src/hwpx_kit/commands/: analyze.py  convert.py  diff_doc.py  doc_objects.py  export.py  fill.py  fill_batch.py  fmt.py  generate.py  header_footer.py  image_add.py  image_edit.py  inspect_doc.py  merge_doc.py  open_check.py  outline.py  page_break.py  read.py  render.py  row_height.py  table_build.py  table_calc.py  table_clear.py  table_copy.py  table_map_cmd.py  table_new.py  table_rows.py  table_set.py  table_style.py  toc.py  validate.py
templates/: Default_Template.hwpx
tests/: conftest.py  test_adapter.py  test_analyze.py  test_cli.py  test_convert.py  test_diff_doc.py  test_doc_objects.py  test_export.py  test_fill.py  test_fill_batch.py  test_fill_fit.py  test_format.py  test_image_edit.py  test_image_header.py  test_inspect.py  test_inspect_structure.py  test_integration.py  test_kordoc.py  test_merge_doc.py  test_office_readers.py  test_open_check.py  test_output.py  test_page_break.py  test_preview.py  test_read_validate.py  test_real_forms.py  test_render_com.py  test_row_height.py  test_skill_package.py  test_stdout_purity.py  test_table_build.py  test_table_calc.py  test_table_clear.py  test_table_columns.py  test_table_copy.py  test_table_map_new.py  test_table_rows.py  test_table_set.py  test_table_style.py  test_toc.py
tests/fixtures/real/: legacy-sample.hwp  seoul-attachment.hwpx  seoul-body.hwpx  seoul-report-brief.hwpx
