[project]
name = "hwpx-kit-cli"
version = "0.9.0"
description = "한글(HWPX) 문서 자동화 CLI — Korean HWPX document automation for AI agents: analyze, fill, read, validate, table ops"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "6aneffy", email = "tkdgus990809@gmail.com" }]
keywords = ["hwpx", "hwp", "hangul", "korean", "document-automation", "claude-code"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "openpyxl>=3.1.5",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-hwpx>=2.24,<3",
]

[project.optional-dependencies]
convert = ["pyhwpx; sys_platform == 'win32'"]

[project.urls]
Homepage = "https://github.com/6aneffy/hwpx-kit"
Repository = "https://github.com/6aneffy/hwpx-kit"
Issues = "https://github.com/6aneffy/hwpx-kit/issues"

[project.scripts]
hwpx-kit = "hwpx_kit.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hwpx_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
