[project]
name = "hwpx-kit-cli"
version = "0.13.0"
description = "한글(HWPX) 문서 자동화 CLI — Korean HWPX document automation for AI agents: analyze, fill, read, validate, table ops"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "6aneffy", email = "tkdgus990809@gmail.com" }]
keywords = ["hwpx", "hwp", "hangul", "korean", "document-automation", "claude-code"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "openpyxl>=3.1.5",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-hwpx>=2.24,<3",
]

[project.optional-dependencies]
convert = ["pyhwpx; sys_platform == 'win32'"]

[project.urls]
Homepage = "https://github.com/6aneffy/hwpx-kit"
Repository = "https://github.com/6aneffy/hwpx-kit"
Issues = "https://github.com/6aneffy/hwpx-kit/issues"

[project.scripts]
hwpx-kit = "hwpx_kit.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hwpx_kit"]

# 🔴 sdist는 명시적 화이트리스트만 담는다 — private/·incoming/·mcp/ 등 기밀
# 유출 방지. hatchling 기본 sdist는 .gitignore를 보는데 이 레포는 무시 규칙을
# .git/info/exclude에 둬서(레포 위생) 빌드가 그걸 못 읽어 전체를 담았다
# (0.9.0~0.13.0 PyPI에 private/ 유출 — 2026-07-22 사고). CLI 배포엔 패키지만
# 필요하고 스킬/플러그인은 GitHub 마켓플레이스로 배포되므로 src만 담으면 충분.
[tool.hatch.build.targets.sdist]
only-include = ["src/hwpx_kit", "README.md", "LICENSE", "pyproject.toml"]
exclude = ["mcp", "private", "incoming", "docs", "skills", ".claude-plugin", "dist", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
